# react-native-secure-db

./: CHANGELOG.md  README.md  SecureDB.podspec  TurboDB.podspec  package.json
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: SecureDBModule.cpp  TurboDBModule.cpp
android/src/main/java/com/securedb/: KeyStoreManager.java  NativeSecureDBSpec.java  SecureDBModule.java
android/src/main/java/com/turbodb/: KeyStoreManager.java  TurboDBModule.java  TurboDBPackage.java
cpp/: ArenaAllocator.h  BinarySerializer.cpp  BinarySerializer.h  BufferedBTree.cpp  BufferedBTree.h  CachedCryptoContext.cpp  CachedCryptoContext.h  DBEngine.cpp  DBEngine.h  LazyRecordProxy.cpp  LazyRecordProxy.h  MMapRegion.cpp  MMapRegion.h  PersistentBPlusTree.cpp  PersistentBPlusTree.h  SecureCryptoContext.h  SecureDBImpl.h  SodiumCryptoContext.cpp  SodiumCryptoContext.h  ThreadPool.cpp  ThreadPool.h  TurboDBImpl.h  WALManager.cpp  WALManager.h
example/: README.md  app.json  package.json
example/android/: settings.gradle
example/ios/: Podfile
example/ios/JSIStorageExample/: AppDelegate.swift
example/ios/JSIStorageExample.xcodeproj/: project.pbxproj
example/ios/JSIStorageExample.xcworkspace/: contents.xcworkspacedata
example/ios/TurboDBExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: KeyManagerIOS.h  KeyManagerIOS.mm  OnLoad.mm  PlatformUtilsIOS.h  PlatformUtilsIOS.mm  SecureDBImpl.mm  TurboDBImpl.mm  TurboDBInstaller.mm
src/: NativeSecureDB.ts  NativeTurboDB.ts  index.tsx  index.web.ts
src/__tests__/: TurboDB.test.ts
(+7 files in other folders)
